# TienKung-IL-LAB

./: .gitattributes  .gitignore  404.html  C1_HANDOFF.md  C1_joint_map.md  C1_ubt_sim改造顺序清单.md  CLAUDE.md  README.md  index.html  sitemap.xml
architecture/: index.html
development/: index.html
getting-started/: index.html
imitation-learning/: index.html
imitation-learning/arm-deployment/: index.html
imitation-learning/data-conversion/: index.html
imitation-learning/deployment/: index.html
imitation-learning/training/: index.html
robots/: index.html
robots/tienkung/: index.html
robots/walker-s2/: index.html
search/: search_index.json
simulation/: index.html
simulation/docker/: index.html
simulation/teleoperation/: index.html
ubt_IL/: CLAUDE.md  README.md
ubt_IL/docker/: Dockerfile  Dockerfile.arm64  README.md  entrypoint.sh  env.sh  fastdds_no_shm.xml  run.sh  torch-2.7.1a0+gite2d141d-cp312-cp312-linux_aarch64.whl
ubt_IL/docker/ros2_msgs/bodyctrl_msgs_src/bodyctrl_msgs/: .gitlab-ci.yml  CMakeLists.txt  package.xml
ubt_IL/docker/ros2_msgs/bodyctrl_msgs_src/bodyctrl_msgs/msg/: Alarm.msg  AlarmArray.msg  Imu.msg  MotorName.msg  MotorStatus.msg  MotorStatus1.msg  MotorStatusMsg1.msg  PowerBatteryStatus.msg  PowerBoardCtrl.msg  PowerLightCtrl.msg  PowerStatus.msg  SbusData.msg
ubt_IL/docker/ros2_msgs/bodyctrl_msgs_src/bodyctrl_msgs/srv/: GetAngleAct.srv  GetForceAct.srv  Movement.srv  PlanEefLine.srv  PlanEefRelLine.srv  PlanJointTraj.srv  SetAngle.srv  SetAngleFlexible.srv  SetForce.srv  SetSpeed.srv  VersionUpgrade.srv
ubt_IL/realsense_wrist_camera/: .gitignore  LICENSE  README.md  pyproject.toml
ubt_IL/realsense_wrist_camera/configs/: wrist_cameras.example.json
ubt_IL/realsense_wrist_camera/realsense_wrist_camera/: __init__.py  __main__.py  _common.py  cli.py  driver.py  find_devices.py  node.py
ubt_IL/realsense_wrist_camera/scripts/: install.sh  start.sh
ubt_IL/scripts/: README.md
ubt_IL/scripts/convert/: README.md  convert.sh  convert_to_lerobot.py  convert_walker_real_to_lerobot_v3.py  fix_stats_format.py  subset_walker_real_19_to_10.py
ubt_IL/scripts/deploy/: README.md  preview_walker_camera.py  replay.py  rollout.sh  rollout_walker.sh  train.sh  train_config.json  train_config_real_act.json  train_config_sim_act.json  train_config_tiangong_all_diffusion.json  train_config_walker_s2_real_pi05.json  train_config_walker_s2_sim.json
ubt_IL/tienkung/: CLAUDE.md  ros2_deploy_bridge.py
ubt_IL/walker/: CLAUDE.md  init_walker.py  ros2_walker_bridge.py
ubt_IL/walker/lerobot_robot_walker/: pyproject.toml
ubt_IL/walker/lerobot_robot_walker/lerobot_robot_walker/: __init__.py  config_walker.py  constants.py  hand_utils.py  walker.py
ubt_IL/walker/lerobot_robot_walker/lerobot_robot_walker/camera/: __init__.py  config_walker_camera.py  walker_camera.py
ubt_IL/walker/walker_sdk_ros2/: CLAUDE.md  colcon_defaults.yaml  package.xml  setup.py
ubt_IL/walker/walker_sdk_ros2/robot_control/: README.md  __init__.py  camera.py  constants.py  joint_test.py  pub_arm_command.py  robot_control.py
ubt_IL/walker/walker_sdk_ros2/ros2/depend_msgs/ecat_task_msgs/: package.xml
ubt_IL/walker/walker_sdk_ros2/ros2/depend_msgs/mc_task_msgs/srv/: WalkerMotion.srv
ubt_IL/walker/walker_sdk_ros2/ros2/depend_msgs/shm_msgs/msg/: Image13m.msg  Image14m.msg  Image16m.msg  Image3m.msg  Image5m.msg  Image6m.msg
ubt_IL/walker/walker_sdk_ros2/ros2/example/: CMakeLists.txt  package.xml
ubt_IL/walker/walker_sdk_ros2/ros2/example/src/: upper_body_action_client.cpp  upper_body_service_client.cpp
ubt_IL/walker/walker_sdk_ros2/ros2/example/src/common/: asr.cpp  audio_player.cpp  mic_recoder.cpp  tts.cpp
ubt_IL/walker/walker_sdk_ros2/ros2/example/src/walker_s2/low_level/: batterystate_subscriber.cpp  bodybackrgbd_color_subscriber.cpp  bodybackrgbd_depth_subscriber.cpp  fisheye_left_subscriber.cpp  fisheye_right_subscriber.cpp  imu_subscriber.cpp  powerboardstate_subscriber.cpp  pub_arm_command.cpp  pub_hand_v3_command.cpp  pub_hand_v4_command.cpp  pub_head_command.cpp  stereo_left_subscriber.cpp  stereo_right_subscriber.cpp  sub_hands_state.cpp  sub_robot_state.cpp  waistfrontrgbd_color_subscriber.cpp  waistfrontrgbd_depth_subscriber.cpp
ubt_sim/: CLAUDE.md  README.md  _usd_scan.py
ubt_sim/config/: walker_s2_parlor.yaml  walker_s2_part_sorting.yaml
ubt_sim/docker/: Dockerfile  env.sh  fastdds_no_shm.xml  run.sh
ubt_sim/scripts/: bake_walker_c1_force_drive_usd.py  bake_walker_c1_hand_friction_usd.py  build_c1_apple_usd.py  collect_walker_c1_pick_place.py  dump_walker_c1_joint_state.py  export_walker_c1_usd.py  import_walker_c1_urdf_test.py  inspect_walker_c1_usd.py  merge_walker_c1_mentor_usd.py  probe_walker_c1_arm_tracking.py  probe_walker_c1_grasp.py  probe_walker_c1_hand_runtime.py  probe_walker_c1_leg_collision.py  probe_walker_c1_leg_isolation.py  probe_walker_c1_workspace.py  rotate_usd_joint.py  run_c1_online_ik_batch.sh  run_c1_pick_place_once.sh  run_c1_teach_and_repeat_batch.sh  run_c1_teach_and_repeat_lightweight.sh  sim_runner.py  start_c1_mentor_sensor_sim.sh  start_c1_pick_place_sim.sh  start_sim.sh  start_walker_s2_sim.sh  test_walker_c1_cfg_spawn.py  walker_s2_sim_runner.py
ubt_sim/teleoperation/: image_client.py  image_server.py
ubt_sim/teleoperation/bridges/: CMakeLists.txt  bridge_config.yaml  walker_s2_bridge_config.yaml  walker_s2_ros2_zmq_bridge.py  zmq_image_bridge  zmq_image_bridge.cpp
ubt_sim/teleoperation/bridges/tienkung/: tiangong_ros2_zmq_bridge.py
ubt_sim/teleoperation/bridges/tienkung_pro/: tienkung_pro_ros2_zmq_bridge.py
ubt_sim/teleoperation/bridges/walker/: walker_s2_ros2_zmq_bridge.py
ubt_sim/teleoperation/bridges/walker_c1/: walker_c1_bridge_config.yaml  walker_c1_ros2_zmq_bridge.py
ubt_sim/teleoperation/bridges/walker_s2/: walker_s2_bridge_config.yaml  walker_s2_ros2_zmq_bridge.py
ubt_sim/teleoperation/msgs/walker_sdk_ros2_msgs_src/src/ecat_task_msgs/: CMakeLists.txt
ubt_sim/teleoperation/msgs/walker_sdk_ros2_msgs_src/src/ecat_task_msgs/msg/: GripCmd.msg  GripStatus.msg
(+348 files in other folders)
