[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_walker"
version = "0.1.0"
description = "Walker S2 dual-arm humanoid robot with V4 dexterous hands plugin for LeRobot"
requires-python = ">=3.12"
dependencies = ["pyzmq"]

[tool.setuptools.packages.find]
include = ["lerobot_robot_walker*"]
